# liqmesh-desktop

./: .gitignore  README.md  package-lock.json  package.json
.claude/plans/: 001-1_tauri雛形とcontract.md  001-2_ble-codec.md  001_全体計画.md
.github/workflows/: windows-build.yml
docs/: BLE_CONTRACT.md  MACOS_RUNBOOK.md  WINDOWS_RUNBOOK.md
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: diag.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ble/: central.rs  chunk.rs  frame.rs  mod.rs  session.rs  transport.rs
src/chat/: frames.test.ts  frames.ts  messagesSelector.test.ts  nearbyPeers.test.ts  nearbyPeers.ts  seedDemo.test.ts  seedDemo.ts  store.test.ts  store.ts  useAI.ts  useBle.ts  useBleAvailability.ts  useChatStore.ts  useIdentity.ts  useReadReceipts.ts
src/components/: AITab.tsx  BluetoothDialog.tsx  Composer.tsx  ConnectionBar.tsx  DebugPanel.tsx  MessageBubble.tsx  MessageList.tsx  NearbyPeerBanner.tsx  ProfileTab.tsx  RoomList.tsx  SearchDialog.tsx  SettingsDialog.tsx  TabBar.tsx  TopBar.tsx
