[package]
name = "liqmesh-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liqmesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the BLE transport actor (mpsc channels + select! + the
# spawned `Driver::run` loop). `btleplug` (the concrete GattLink) is deferred to
# PR-B2b-2; this PR only needs the runtime + sync primitives.
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
# `test-util` is reserved for time-paused tests; the transport tests drive ticks
# explicitly over a channel and use an injected closure clock, so they stay
# deterministic without it, but it is available for future timing tests.
tokio = { version = "1", features = ["macros", "rt", "test-util"] }

