[package]
name = "liqmesh-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liqmesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the BLE transport actor (mpsc channels + select! + the
# spawned `Driver::run` loop, the notification pump, and the maintenance-tick
# task). `rt-multi-thread` is needed because the long-running BLE tasks are
# `tokio::spawn`ed onto Tauri's multi-threaded runtime; `time` drives the tick
# interval and scan timeout.
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
# Concrete cross-platform BLE central (Windows = WinRT). 0.12 is the current
# release; the API used here (Manager/Central/Peripheral/ScanFilter/WriteType/
# ValueNotification) was verified against the 0.12.0 source.
btleplug = "0.12"
# `StreamExt::next` for draining the btleplug notification stream. No executor
# needed (we run on tokio), so default features are off.
futures = { version = "0.3", default-features = false, features = ["std"] }
# Parsing/constructing the fixed GATT UUIDs. btleplug exposes `uuid::Uuid` in its
# public API, so we depend on the same crate to name them with `from_u128`.
uuid = "1"

[dev-dependencies]
# `test-util` is reserved for time-paused tests; the transport tests drive ticks
# explicitly over a channel and use an injected closure clock, so they stay
# deterministic without it, but it is available for future timing tests.
tokio = { version = "1", features = ["macros", "rt", "test-util"] }

